--- a/head.html
+++ b/head.html
@@ -7,7 +7,7 @@
   <title>Lorem Gutenberg, by Mark Fullmer</title>
   <meta name="description" content="An English-language random text generator by Mark Fullmer">
   <meta property="og:title" content="Lorem Gutenberg, by Mark Fullmer">
-  <meta property="og:image" content="/screenshot.png">
+  <meta property="og:image" content="https://lorem-gutenberg.markfullmer.com/screenshot.png">
   <meta property="og:description" content="An English-language random text generator by Mark Fullmer" />
   <meta property="og:url" content="https://lorem-gutenberg.markfullmer.com/" />
   <meta property="og:site_name" content="Lorem Gutenberg, by Mark Fullmer" />
